[package]
name = "servicepoint-cli"
description = "A command line interface for the ServicePoint display."
version = "0.4.0"
edition = "2021"
rust-version = "1.80.0"
publish = true
resolver = "2"
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://git.berlin.ccc.de/servicepoint/servicepoint-cli"
homepage = "https://crates.io/crates/servicepoint-cli"
keywords = ["cccb", "cccb-servicepoint", "cli"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
scap = "0.0.8"
image = "0.25.5"
fast_image_resize = { version = "5.1", features = ["image"] }
tungstenite = "0.26"

[dependencies.servicepoint]
package = "servicepoint"
version = "0.14.1"

[profile.release]
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
strip = true        # Strip symbols from binary
